namespace Entidad;

public class Veterinario
{
    private int Id;
    private string Nombre;
}