@startuml

class Veterinario <<entity>>{
    - Id : int
    - Nombre : string
}

class Consulta <<entity>>{
    - Fecha : DateTime
    - DiagnoticoFinal : string
    + RegistrarMascota() : void
}

class LineaTratamiento <<entity>>{
    - Concepto : string
    - Precio : decimal
}

class Cliente <<entity>>{
    - DNI : string
    - NombreCompleto : string
    - Telefono : string
    + PagoFactura() : void
    + SolicitudConsulta() : void
}

class Mascota <<entity>>{
    - NumChip : string
    - Nombre : string
    - Especie : string
    - Peso : double
}

class Perro <<entity>>{
    + NivelAgrsividad : int
}

class Gato <<entity>>{
    + TestLeucemia : bool
}


Cliente "1"o--"1" Mascota : es dueño de >
Consulta "1"--"1" Mascota : atiende a >
Consulta "1"--"1" Veterinario : realizada por >
Consulta "1"*--"*" LineaTratamiento : contiene >
Mascota <|-- Perro : es un <
Mascota <|-- Gato : es un <

@enduml